# Proyecto-2

./: .gitignore  AggressiveStrategy.cpp  AggressiveStrategy.h  AgresivaStrategy.cpp  AgresivaStrategy.h  Battle.cpp  Battle.h  BattleStrategy.cpp  BattleStrategy.h  CMakeLists.txt  Character.cpp  Character.h  DefensaStrategy.cpp  DefensaStrategy.h  DefensiveStrategy.cpp  DefensiveStrategy.h  Element.h  Entrenador.cpp  Entrenador.h  Enums.h  EspeciePokemon.cpp  EspeciePokemon.h  Event.cpp  Event.h  Evento.cpp  Evento.h  EventoAtrapar.cpp  EventoAtrapar.h  EventoBatallaEntrenador.cpp  EventoBatallaEntrenador.h  EventoCentroPokemon.cpp  EventoCentroPokemon.h  EventoGimnasio.cpp  EventoGimnasio.h  EventoNPC.cpp  EventoNPC.h  EventoPokemonSalvaje.cpp  EventoPokemonSalvaje.h  EventoTesoro.cpp  EventoTesoro.h  (+66 more)
data/: especies.txt  items.txt  lideres.txt  mapa.txt
