cmake_minimum_required(VERSION 3.10)
project(Proyecto_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Proyecto_2 main.cpp
        World.cpp
        World.h
        Space.cpp
        Space.h
        Objective.cpp
        Objective.h
        Logger.cpp
        Logger.h
        Character.cpp
        Character.h
        Element.h
        Item.cpp
        Item.h
        Obstacle.cpp
        Obstacle.h
        FileLoader.cpp
        FileLoader.h
        Enums.h
        EspeciePokemon.cpp
        EspeciePokemon.h
        Pokemon.cpp
        Pokemon.h
        Inventario.cpp
        Inventario.h
        Jugador.cpp
        Jugador.h
        Entrenador.cpp
        Entrenador.h
        Evento.cpp
        Evento.h
        EventoPokemonSalvaje.cpp
        EventoPokemonSalvaje.h
        EventoBatallaEntrenador.cpp
        EventoBatallaEntrenador.h
        EventoTiendaObjetos.cpp
        EventoTiendaObjetos.h
        EventoCentroPokemon.cpp
        EventoCentroPokemon.h
        EventoTesoro.cpp
        EventoTesoro.h
        EventoAtrapar.cpp
        EventoAtrapar.h
        EventoNPC.cpp
        EventoNPC.h
        EventoGimnasio.cpp
        EventoGimnasio.h
        PeleaStrategy.cpp
        PeleaStrategy.h
        AgresivaStrategy.cpp
        AgresivaStrategy.h
        DefensaStrategy.cpp
        DefensaStrategy.h
        RandomStrategy.cpp
        RandomStrategy.h
        Pelea.cpp
        Pelea.h
        Lugar.cpp
        Lugar.h
        GeneradorMapa.cpp
        GeneradorMapa.h
        PokemonFactory.cpp
        PokemonFactory.h
        Game.cpp
        Game.h)
