cmake_minimum_required(VERSION 3.10)
project(Proyecto_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Proyecto_2 main.cpp
        World.cpp
        World.h
        Space.h
        Objective.cpp
        Objective.h
        Logger.cpp
        Logger.h
        Character.h
        Element.h
        Item.cpp
        Item.h
        Obstacle.cpp
        Obstacle.h
        FileLoader.cpp
        FileLoader.h
        Enums.h
        PokemonSpecies.cpp
        PokemonSpecies.h
        Pokemon.cpp
        Pokemon.h
        Inventory.cpp
        Inventory.h
        Player.cpp
        Player.h
        Trainer.cpp
        Trainer.h
        Event.cpp
        Event.h
        WildPokemonEvent.cpp
        WildPokemonEvent.h
        TrainerBattleEvent.cpp
        TrainerBattleEvent.h
        ShopEvent.cpp
        ShopEvent.h
        PokemonCenterEvent.cpp
        PokemonCenterEvent.h
        TreasureEvent.cpp
        TreasureEvent.h
        TrapEvent.cpp
        TrapEvent.h
        NpcEvent.cpp
        NpcEvent.h
        GymEvent.cpp
        GymEvent.h
        BattleStrategy.cpp
        BattleStrategy.h
        AggressiveStrategy.cpp
        AggressiveStrategy.h
        DefensiveStrategy.cpp
        DefensiveStrategy.h
        RandomStrategy.cpp
        RandomStrategy.h
        Battle.cpp
        Battle.h
        Location.cpp
        Location.h
        MapGenerator.cpp
        MapGenerator.h
        PokemonFactory.cpp
        PokemonFactory.h
        Game.cpp
        Game.h)
